spacing fixed

--- a/VendingMachine-Style.scss
+++ b/VendingMachine-Style.scss
@@ -18,6 +18,7 @@
 }
 
 @mixin flex {
+  position: relative;
   display: flex;
   justify-content: space-around;
 }
@@ -31,7 +32,10 @@
 }
 body {
   user-select: none;
-  @include flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
   height: 98vh;
   background: linear-gradient(
@@ -43,27 +47,32 @@ body {
 }
 
 #leftContainer {
-  @include flex;
+  grid-column: 1/3;
+  display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 50vw;
-  margin-left: 3vw;
+  justify-content: space-around;
+  align-items: center;
+  height: 95vh;
+  width: 40vw;
+  border: blue 4px solid;
+
 }
 #bubble {
   background-image: url("./images/bubble.png");
   background-size: cover;
-  width: 40vw;
-  height: 70vh;
-  margin-top: -2vh;
+  width: 35vw;
+  height: 60vh;
 }
 #textContainer {
   @include flex;
   flex-direction: column;
   align-items: center;
-  height: 48vh;
-  width: 30vw;
+  justify-content: center;
+  height: 40vh;
+  width: 25vw;
   margin-left: 5vw;
   margin-top: 2vw;
+  border: solid green 4px
 }
 
 .text {
@@ -74,17 +83,19 @@ body {
   z-index: 1;
   position: absolute;
 }
-#choiceOutput {
-  margin-top: 30vh;
-}
+
 
 #btnContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 35vw;
-  height: auto;
-  margin-left: 4vw;
-  margin-bottom: 1vw;
+  height: 20vh;
 }
-
+.btnRow {
+  display: flex;
+}
 input {
   align-items: center;
   justify-content: center;
@@ -138,17 +149,17 @@ input:active {
 
 #menuContainer {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-column: 3/4;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   justify-content: center;
   height: 80vh;
-  width: 11vw;
+  width: 10vw;
   background: rgba(167, 239, 244, 0.876);
   border-radius: 4px;
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
     rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
-  margin-right: 3vw;
-  margin-left: 4vw;
-  padding: 70px 0px 40px 0px;
+    border: solid 4px orange;
+
 }
 #scroll-up,
 #scroll-down {
@@ -173,8 +184,11 @@ input:active {
 }
 
 #machine {
+  display: grid;
+  grid-column: 4/6;
   height: 90vh;
   width: auto;
   margin-top: 1vh;
   margin-right: 2vw;
+  border: 4px solid red;
 }
